--- a/yelp/index.html
+++ b/yelp/index.html
@@ -36,7 +36,7 @@
                     <span>Near</span>
                     <input type="search" id="location" class="search-location"
                         placeholder="address, neighbourhood,city, state or zip ">
-                    <a href=""><i class="large material-icons">search</i></a>
+                    <a class="search-block" href=""><i class="large material-icons">search</i></a>
                 </div>
             </div>
 
@@ -119,11 +119,11 @@
             </nav>
         </section>
 
-        <section class="hot-business wrapper">
+        <section class="hot-business">
             <h4>Hot & New Businesses</h4>
             <div class="new-business-wrapper">
                 <div class="new-business type1">
-                    <a href=""><img src="img/zattar.jpg" alt="" width="320" height="200"></a>
+                    <a href=""><img src="img/zattar.jpg" alt="" height="180"></a>
                     <div class="business-description">
                         <h4>Le Moon Thai Eatery</h4>
                         <span class="fa fa-star checked"></span>
@@ -135,12 +135,11 @@
                         <p>Thai</p>
                         <p>Marina/Cow Hollow</p>
                         <i class="fa fa-fire"></i>
-                        <span>Opened 6 weeks ago</span>
+                        <span class="remarks">Opened 6 weeks ago</span>
                     </div>
                 </div>
-
                 <div class="new-business type2">
-                    <a href=""><img src="img/gotharvest.jpg" alt="" width="320" height="200"></a>
+                    <a href=""><img src="img/gotharvest.jpg" alt="" height="180"></a>
                     <div class="business-description">
                         <h4>1011 Sip Tea</h4>
                         <span class="fa fa-star checked"></span>
@@ -152,12 +151,11 @@
                         <p>Bubble Tea, Coffee & Tea</p>
                         <p>Outer Sunset</p>
                         <i class="fa fa-fire"></i>
-                        <span>Opened a few days ago</span>
+                        <span class="remarks">Opened a few days ago</span>
                     </div>
                 </div>
-
                 <div class="new-business type3">
-                    <a href=""><img src="img/ziptea.jpg" alt="" width="320" height="200"></a>
+                    <a href=""><img src="img/ziptea.jpg" alt="" height="180"></a>
                     <div class="business-description">
                         <h4>Hetchy's Hots</h4>
                         <span class="fa fa-star checked"></span>
@@ -169,14 +167,91 @@
                         <p>CSA</p>
                         <p>Bayview-Hunters Point</p>
                         <i class="fa fa-fire"></i>
-                        <span>Opened 8 weeks ago</span>
+                        <span class="remarks">Opened 8 weeks ago</span>
                     </div>
                 </div>
+            </div>
+            <a class="see-more" href="">See more hot and new businesses</a>
+        </section>
 
+        <section class="local-yelp">
+            <div class="cofee-cup-box">
+                <h4 class="local-sub-heading">The Local Yelp</h4>
+                <div class="coffee-cup">
+                    <a href=""><img src="img/coffee.jpg" alt="" height="200"></a>
+                    <div class="coffee-cup-description">
+                        <h4 class="event-description-heading">Coffee? Coffee ☕</h4>
+                        <p>Has the concept and measurement of a day, time, months lost meaning? Yeah, us too. Time to
+                            order a coffee. Here’s a Collection of great local coffee shops open and ready to connect
+                            you with your caffeine.</p>
+                        <span class="note">The Local Yelp</span>
+                    </div>
+                </div>
+                <a class="remarks-local" href="">See More</a>
+            </div>
+            <div class="yelp-event-box">
+                <h4 class="local-sub-heading help">Official Yelp Event</h4>
+                <div class="yelp-event">
+                    <a href=""><img src="img/virtualimage.jpg" alt="" height="200"></a>
+                    <div class="yelp-event-description">
+                        <h4 class="event-description-heading">Virtual Yelp Event: HIIT Happens...</h4>
+                        <p>If all this Sheltering-in-Place has added some unwanted pounds, then you'll want to join
+                            Leonie LaPoint.
+                        </p>
+                        <span class="note">Sat, Jun 27, 10:00 am - 10:30 am</span>
+                    </div>
+                </div>
+                <a class="remarks-local" href="">See all events</a>
+            </div>
+        </section>
+
+        <section class="review-wrapper">
+            <div class="reivie-of-day">
+                <h4>Review of the Day</h4>
+                <div class="review-content">
+                    <div class="review-ratings">
+                        <a href=""><img src="img/natureimage.jpg" alt=""></a>
+                        <div>
+                            <a href="">Elaine Y</a>
+                            <nav class="review-navigation">
+                                <ul>
+                                    <li>
+                                        <div>
+                                            <a href=""><img src="img/friends-icon.PNG" alt=""></a>
+                                            <a href="">813</a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <a href=""><span class="fa fa-star checked"></span></a>
+                                            <a href="">1094</a>
+                                        </div>
+                                    </li>
+                                    <li><a href="">Elite '20</a></li>
+                                </ul>
+                            </nav>
+                            <p>Wrote a review for <a href="">2227 Irving Seafood Market</a></p>
+                        </div>
+                        <div class="review-banner">
+                            <p>Review of the Day</p>
+                            <img src="img/banner.png" alt="">
+                        </div>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star unchecked"></span>
+                        <span>5/3/2020</span>
+                        <p>This is one of our favorite stops along Irving to pick up our meats for the week. They have a
+                            very good variety of choices and you can also always ask if they might have some less
+                            popular pieces that aren't displayed (like pork cheeks, beef tendons, etc). I also like that
+                            you can request them to cut pieces however you need it prepped which makes life a lot easier
+                            when you are prepping at home. By far, one of our favo... Continue reading</p>
+                    </div>
+                </div>
             </div>
 
         </section>
-
     </main>
 </body>
 
